Remove DbusExporter class, only register service name.  Ref count usages to know when to remove.

This simplifies code and removes a bug in which if you add two plasmoids, then remove the first one, we no longer appear to be running.

BUG: 305614
REVIEW: 107046